[fabric] Fix Chart versions and add-cli via helm chart
Signed-off-by: sownak <sownak.roy@accenture.com>

--- a/platforms/hyperledger-fabric/charts/fabric-cli/templates/deployment.yaml
+++ b/platforms/hyperledger-fabric/charts/fabric-cli/templates/deployment.yaml
@@ -82,7 +82,7 @@ spec:
         - name: VAULT_TYPE
           value: "{{ .Values.global.vault.type }}"
         - name: CORE_PEER_ADDRESS
-          value: "{{ .Release.Name }}.{{ .Release.Namespace }}:{{ .Values.ports.grpc.clusterIpPort }}"
+          value: "{{ include "fabric-cli.peername" . }}.{{ .Release.Namespace }}:{{ .Values.ports.grpc.clusterIpPort }}"
         command: ["sh", "-c"]
         args:
         - |-
@@ -199,9 +199,9 @@ spec:
         - name: FABRIC_LOGGING_SPEC
           value: "debug"
         - name: CORE_PEER_ID
-          value: "{{ .Release.Name }}.{{ .Release.Namespace }}"
+          value: "{{ include "fabric-cli.peername" . }}.{{ .Release.Namespace }}"
         - name: CORE_PEER_ADDRESS
-          value: "{{ .Release.Name }}.{{ .Release.Namespace }}:{{ .Values.ports.grpc.clusterIpPort }}"
+          value: "{{ include "fabric-cli.peername" . }}.{{ .Release.Namespace }}:{{ .Values.ports.grpc.clusterIpPort }}"
         - name: CORE_PEER_LOCALMSPID
           value: "{{ .Values.localMspId }}"
         - name: CORE_PEER_TLS_ENABLED
