--- a/platforms/hyperledger-fabric/charts/fabric-cli/values.yaml
+++ b/platforms/hyperledger-fabric/charts/fabric-cli/values.yaml
@@ -48,10 +48,12 @@ image:
   #Eg. pullSecret: regcred
   pullSecret:
 
-storage:
-  #Provide the storagesize
-  size: 256Mi
-
+#Provide the peer name this CLI will connect to. Keep empty for creation via peernode dependency
+peerName:
+#Provide the StorageClass for CLI PVC
+storageClass:
+#Provide the size for CLI PVC
+storageSize: 256Mi
 #Provide the localMspId for organization
 #Eg. localMspId: supplychainMSP
 localMspId: supplychainMSP
