[fabric] Genesis update and add new channel
Signed-off-by: sownak <sownak.roy@accenture.com>

--- a/platforms/hyperledger-fabric/charts/fabric-channel-join/templates/join_channel.yaml
+++ b/platforms/hyperledger-fabric/charts/fabric-channel-join/templates/join_channel.yaml
@@ -12,6 +12,7 @@ metadata:
   annotations:
     "helm.sh/hook": post-install
     "helm.sh/hook-weight": "0"
+    "helm.sh/hook-delete-policy": "before-hook-creation"
   labels:
     app.kubernetes.io/name: channel-join-{{ .Release.Name }}
     app.kubernetes.io/component: fabric-channel-join-job
