--- a/platforms/hyperledger-fabric/charts/fabric-genesis/values.yaml
+++ b/platforms/hyperledger-fabric/charts/fabric-genesis/values.yaml
@@ -103,5 +103,7 @@ channels:
       - carrier
 
 settings:
+  # Flag to generate the genesis file for Fabrix 2.2.x
+  generateGenesis: true
   # Flag to ensure the genesis configmap is removed on helm uninstall
   removeConfigMapOnDelete: true
