--- a/platforms/hyperledger-fabric/charts/fabric-genesis/templates/genesis-job-cleanup.yaml
+++ b/platforms/hyperledger-fabric/charts/fabric-genesis/templates/genesis-job-cleanup.yaml
@@ -2,9 +2,9 @@
 apiVersion: batch/v1
 kind: Job
 metadata:
-  name: {{ include "fabric-genesis.name" . }}-cleanup
+  name: {{ .Release.Name }}-cleanup
   labels:
-    app.kubernetes.io/name: fabric-genesis-job-cleanup
+    app.kubernetes.io/name: {{ .Release.Name }}-cleanup
     app.kubernetes.io/component: genesis-job-cleanup
     app.kubernetes.io/part-of: {{ include "fabric-genesis.fullname" . }}
     app.kubernetes.io/namespace: {{ .Release.Namespace }}
@@ -20,7 +20,7 @@ spec:
   template:
     metadata:
       labels:
-        app.kubernetes.io/name: fabric-genesis-job-cleanup
+        app.kubernetes.io/name: {{ .Release.Name }}-cleanup
         app.kubernetes.io/component: genesis-job-cleanup
         app.kubernetes.io/part-of: {{ include "fabric-genesis.fullname" . }}
         app.kubernetes.io/namespace: {{ .Release.Namespace }}
