--- a/platforms/hyperledger-indy/configuration/roles/check/validation/tasks/check_count.yaml
+++ b/platforms/hyperledger-indy/configuration/roles/check/validation/tasks/check_count.yaml
@@ -4,40 +4,23 @@
 #  SPDX-License-Identifier: Apache-2.0
 ##############################################################################################
 
-# Reset counters
-- name: Reset counters
+# Counting the number of steward nodes
+- name: "Count steward nodes"
   set_fact:
-    trustee_count=0
-    steward_count=0
-    endorser_count=0
+    total_stewards: "{{ total_stewards | int + 1 }}"
+  loop: "{{ org.services.stewards }}"
+  loop_control:
+    loop_var: stewards
+  when: (stewards is defined) and (stewards | length > 0)
 
-# Counting Genesis Stewards
-- name: "Counting Genesis Stewards"
+# Counting the number of trustee nodes
+- name: "Count trustee nodes"
   set_fact:
-    steward_count={{ steward_count|default(0)|int + 1 }}
-    total_stewards={{ total_stewards|default(0)|int + 1 }}
-  loop: "{{ stewards }}"
+    total_trustee: "{{ total_trustee | int + 1 }}"
+  when: (org.services.trustee is defined) and (org.services.trustee.name | length > 0)
 
-# Counting trustees per Org
-- name: "Counting trustees per Org"
+# Counting the number of endorser nodes
+- name: "Count endorser nodes"
   set_fact:
-    trustee_count={{ trustee_count|default(0)|int + 1 }}
-    total_trustees={{ total_trustees|default(0)|int + 1 }}
-  loop: "{{ trustees }}"
-
-# Print error and end playbook if trustee count limit fails
-- name: Print error and end playbook if trustee count limit fails
-  debug: msg="The trustee count is {{ trustee_count }}. There should be max 1 trustee per organization."
-  failed_when: trustee_count|int > 1
-
-# Counting Endorsers
-- name: "Counting Endorsers"
-  set_fact:
-    endorser_count={{ endorser_count|default(0)|int + 1 }}
-  loop: "{{ endorsers }}"
-
-# Print error abd end playbook  if endorser count limit fails
-- name: Print error abd end playbook  if endorser count limit fails
-  debug: msg="The endorser count is {{ endorser_count }}. There should be max 1 endorser per organization."
-  failed_when: endorser_count|int > 1
-  when: endorser_count is defined
+    total_endorser: "{{ total_endorser | int + 1 }}"
+  when: (org.services.endorser is defined) and (org.services.endorser.name | length > 0)
