--- a/platforms/hyperledger-indy/configuration/roles/create/helm_component/peer/vars/main.yaml
+++ b/platforms/hyperledger-indy/configuration/roles/create/helm_component/peer/vars/main.yaml
@@ -4,10 +4,7 @@
 #  SPDX-License-Identifier: Apache-2.0
 ##############################################################################################
 
-# Deploy Steward nodes
-- name: "Deploy Steward nodes"
-  include_tasks: nested.yaml
-  loop: "{{ org.services.stewards }}"
-  loop_control:
-    loop_var: steward
-  when: steward is defined and steward | length > 0
+dlt_templates:
+  generate-keys: generate_keys.tpl
+  generate-genesis: generate_genesis.tpl
+  stewards: stewards.tpl
