--- a/platforms/hyperledger-indy/configuration/samples/network-indyv3-aries.yaml
+++ b/platforms/hyperledger-indy/configuration/samples/network-indyv3-aries.yaml
@@ -96,8 +96,7 @@ network:
       # Services maps to the pods that will be deployed on the k8s cluster
       # This sample has trustee
       services:
-        trustees:
-        - trustee:
+        trustee:
           name: authority-trustee
           genesis: true
           server:
@@ -150,6 +149,12 @@ network:
       # Services maps to the pods that will be deployed on the k8s cluster
       # This sample has trustee, 4 stewards and endorser
       services:
+        trustee:
+          name: university-trustee
+          genesis: true
+          server:
+            port: 8000
+            ambassador: 15010
         stewards:
         - steward:
           name: university-steward-1
@@ -203,8 +208,7 @@ network:
             port: 15742
             targetPort: 15742
             ambassador: 15742        # Port for ambassador service
-        endorsers:
-        - endorser:
+        endorser:
           name: university-endorser
           full_name: Faber university of the Demo.
           avatar: http://faber.com/avatar.png
@@ -214,4 +218,4 @@ network:
           server:
             httpPort: 15033
             apiPort: 15034
-            webhookPort: 15035          
+            webhookPort: 15035     
