--- a/platforms/hyperledger-indy/configuration/samples/network-minikube-aries.yaml
+++ b/platforms/hyperledger-indy/configuration/samples/network-minikube-aries.yaml
@@ -78,8 +78,7 @@ network:
       # Services maps to the pods that will be deployed on the k8s cluster
       # This sample has trustee
       services:
-        trustees:
-        - trustee:
+        trustee:
           name: authority-trustee
           genesis: true
           server:
@@ -175,8 +174,7 @@ network:
             port: 15742
             targetPort: 15742
             ambassador: 15742
-        endorsers:
-        - endorser:
+        endorser:
           name: university-endorser
           full_name: Faber university of the Demo.
           avatar: http://faber.com/avatar.png
