--- a/platforms/shared/configuration/roles/create/job_component/vars/main.yaml
+++ b/platforms/shared/configuration/roles/create/job_component/vars/main.yaml
@@ -9,8 +9,12 @@ job_templates:
   secondary_genesis: secondary_genesis.tpl
   primary_init: primary_init.tpl
   secondary_init: secondary_init.tpl
+  indy_genesis: indy_genesis.tpl
+  indy_endorser: indy_endorser.tpl
 charts:
   primary_genesis: "{{ network.type }}-genesis"
   secondary_genesis: "{{ network.type }}-genesis"
   primary_init: corda-init
   secondary_init: corda-init
+  indy_genesis: indy-genesis
+  indy_endorser: indy-register-identity
