--- a/platforms/shared/configuration/roles/helm_lint/vars/main.yaml
+++ b/platforms/shared/configuration/roles/helm_lint/vars/main.yaml
@@ -67,3 +67,6 @@ charts:
   quorum-connector: quorum-cacti-connector
   external_chaincode: fabric-external-chaincode
   install_external_chaincode_job: fabric-external-chaincode-install
+  generate-keys: indy-key-mgmt
+  generate-genesis: indy-genesis
+  stewards: indy-node
