--- a/platforms/hyperledger-indy/configuration/deploy-network.yaml
+++ b/platforms/hyperledger-indy/configuration/deploy-network.yaml
@@ -4,10 +4,11 @@
 #  SPDX-License-Identifier: Apache-2.0
 ##############################################################################################
 
-#########################
+##############################################################################################
 # Playbook to create deployment files for namespaces, service account and clusterrolebinding
 # Playbook arguments: complete network.yaml
-#########################
+##############################################################################################
+---
 - hosts: ansible_provisioners
   gather_facts: no
   no_log: "{{ no_ansible_log | default(false) }}"
@@ -24,203 +25,100 @@
       name: check/validation
 
   # Create namespaces for organizations
-  - name: 'Create namespace'
+  - name: "Create namespace"
     include_role:
       name: create/namespace
     vars:
-      component_name: "{{ organizationItem.name | lower }}-ns"
-      component_type_name: "{{ organizationItem.type | lower }}"
-      kubernetes: "{{ organizationItem.k8s }}"
-      release_dir: "{{playbook_dir}}/../../../{{organizationItem.gitops.release_dir}}/{{ organizationItem.name | lower }}"
-    loop: "{{ network['organizations'] }}"
-    loop_control:
-      loop_var: organizationItem
-
-  # Create service accounts
-  - name: 'Create service accounts'
-    include_role:
-      name: create/serviceaccount/main
-    vars:
-      component_ns: "{{ organizationItem.name | lower }}-ns"
-      organization: "{{ organizationItem.name | lower }}"
-      component_type_name: "{{ organization }}"
-      services: "{{ organizationItem.services }}"
-      gitops: "{{ organizationItem.gitops }}"
-      kubernetes: "{{ organizationItem.k8s }}"
-    loop: "{{ network['organizations'] }}"
-    loop_control:
-      loop_var: organizationItem
-    when: organizationItem.org_status is not defined or organizationItem.org_status == 'new'
-
-  # Create StorageClass
-  - name: Create Storage Class
-    include_role:
-      name: "{{ playbook_dir }}/../../../platforms/shared/configuration/roles/setup/storageclass"
-    vars:
-      org_name: "{{ org.name | lower }}"
-      sc_name: "{{ org_name }}-bevel-storageclass"
-      region: "{{ org.k8s.region | default('eu-west-1') }}"
+      component_name: "{{ org.name | lower }}-ns"
+      component_type_name: "{{ org.type | lower }}"
+      kubernetes: "{{ org.k8s }}"
+      release_dir: "{{playbook_dir}}/../../../{{org.gitops.release_dir}}/{{ org.name | lower }}"
     loop: "{{ network['organizations'] }}"
     loop_control:
       loop_var: org
-    when: org.org_status is not defined or org.org_status == 'new'
 
-  # Admin K8S auth
-  - name: Admin K8S auth
+  # Create necessary Kubernetes secrets for each organization
+  - name: "Create k8s secrets"
     include_role:
-      name: setup/vault_kubernetes
+      name: create/secrets
     vars:
-      organization: "{{ organizationItem.name | lower }}"
-      component_ns: "{{ organizationItem.name | lower }}-ns"
-      component_name: "{{ organization }}-bevel-ac-vault-auth"
-      component_type: "GetServiceAccount"
-      vault: "{{ organizationItem.vault }}"
-      auth_path: "kubernetes-{{ organization }}-admin-auth"
-      kubernetes: "{{ organizationItem.k8s }}"
+      component_ns: "{{ org.name | lower }}-ns"
+      kubernetes: "{{ org.k8s }}"
+      vault: "{{ org.vault }}"
     loop: "{{ network['organizations'] }}"
     loop_control:
-      loop_var: organizationItem
-    when: organizationItem.org_status is not defined or organizationItem.org_status == 'new'
+      loop_var: org
 
-  # Generate auth job
-  - name: 'Generate auth job'
+  # Generate keys for each nodes
+  - name: "Generate keys"
     include_role:
-      name: setup/auth_job
+      name: setup/generate-keys
     vars:
-      organization: "{{ organizationItem.name | lower }}"
-      component_ns: "{{ organizationItem.name | lower }}-ns"
-      component_name: "{{ organization }}"
-      services: "{{ organizationItem.services }}"
-      kubernetes: "{{ organizationItem.k8s }}"
-      vault: "{{ organizationItem.vault }}"
-      gitops: "{{ organizationItem.gitops }}"
+      org_name: "{{ org.name | lower }}"
+      stewards: "{{ org.services.stewards }}"
+      cloud_provider: "{{ org.cloud_provider | lower }}"
+      vault: "{{ org.vault }}"
+      kubernetes: "{{ org.k8s }}"
+      component_type: "generate-keys"
+      component_ns: "{{ org_name }}-ns"
+      component_name: "{{ org_name }}-keys"
+      values_dir: "{{playbook_dir}}/../../../{{org.gitops.release_dir}}"
+      charts_dir: "{{ org.gitops.chart_source }}"
     loop: "{{ network['organizations'] }}"
     loop_control:
-      loop_var: organizationItem
-    when: organizationItem.org_status is not defined or organizationItem.org_status == 'new'
+      loop_var: org
 
-  # Get Vault AC Token via Service Account
-  - name: Get Vault AC Token via Service Account
+  # Get each node keys for the Genesis setup
+  - name: "Get keys for the Genesis setup"
     include_role:
-      name: check/k8_component
+      name: setup/genesis-node-keys
     vars:
-      organization: "{{ organizationItem.name | lower }}"
-      component_ns: "{{ organizationItem.name | lower }}-ns"
-      component_name: "{{ organization }}-bevel-ac-vault-auth"
-      component_type: "GetServiceAccount"
-      vault: "{{ organizationItem.vault }}"
-      kubernetes: "{{ organizationItem.k8s }}"
+      component_ns: "{{ org.name | lower }}-ns"
+      kubernetes: "{{ org.k8s }}"
     loop: "{{ network['organizations'] }}"
     loop_control:
-      loop_var: organizationItem
+      loop_var: org
 
-  # Generate indy crypto and insert into Vault
-  - name: 'Generate indy crypto and insert into Vault'
+  # Install Genesis
+  - name: "Install Genesis"
     include_role:
-      name: setup/crypto
-    vars:
-      organization: "{{ organizationItem.name | lower }}"
-      component_ns: "{{ organizationItem.name | lower }}-ns"
-      component_name: "{{ organization }}"
-      services: "{{ organizationItem.services }}"
-      kubernetes: "{{ organizationItem.k8s }}"
-      vault: "{{ organizationItem.vault }}"
-      gitops: "{{ organizationItem.gitops }}"
-      vault_ac_token: "{{ ac_vault_tokens[organization] }}"
-    loop: "{{ network['organizations'] }}"
-    loop_control:
-      loop_var: organizationItem
-    when: organizationItem.org_status is not defined or organizationItem.org_status == 'new'
+      name: setup/genesis
 
-  # Create and deploy domain genesis
-  - name: 'Create domain genesis'
-    include_role:
-      name: setup/domain_genesis
-
-  # Create and deploy pool genesis
-  - name: 'Create pool genesis'
-    include_role:
-      name: setup/pool_genesis
-
-  # Add new Trustees via existing Trustee
-  - name: "Add New Trustees via existing Trustee"
-    include_role:
-      name: setup/trustees
-    vars:
-      new_org_query: "organizations[?org_status=='new']"
-      neworg: "{{ network | json_query(new_org_query) | first }}"
-      organization: "{{ organizationItem.name | lower }}"
-      component_ns: "{{ organizationItem.name | lower }}-ns"
-      component_name: "{{ organization }}"
-      kubernetes: "{{ organizationItem.k8s }}"
-      gitops: "{{ organizationItem.gitops }}"
-      vault: "{{ organizationItem.vault }}"
-    loop: "{{ network['organizations'] }}"
-    loop_control:
-      loop_var: organizationItem
-    when:
-    - (add_new_org|bool and add_new_org_network_trustee_present|bool)
-    - (organizationItem.org_status is not defined or organizationItem.org_status == 'existing')
-
-  # Add new Stewards via existing Trustee
-  - name: "Add New Stewards via existing Trustee"
+  # Install Steward nodes
+  - name: Install Steward nodes
     include_role:
       name: setup/stewards
     vars:
-      new_org_query: "organizations[?org_status=='new']"
-      neworg: "{{ network | json_query(new_org_query) | first }}"
-      organization: "{{ organizationItem.name | lower }}"
-      component_ns: "{{ organizationItem.name | lower }}-ns"
-      component_name: "{{ organization }}"
-      kubernetes: "{{ organizationItem.k8s }}"
-      gitops: "{{ organizationItem.gitops }}"
-      vault: "{{ organizationItem.vault }}"
+      org_name: "{{ org.name | lower }}"
+      cloud_provider: "{{ org.cloud_provider | lower }}"
+      kubernetes: "{{ org.k8s }}"
+      component_ns: "{{ org_name }}-ns"
+      component_type: "stewards"
+      values_dir: "{{playbook_dir}}/../../../{{org.gitops.release_dir}}"
+      charts_dir: "{{ org.gitops.chart_source }}"
     loop: "{{ network['organizations'] }}"
     loop_control:
-      loop_var: organizationItem
-    when:
-    - (add_new_org|bool and add_new_org_network_trustee_present|bool)
-    - (organizationItem.org_status is not defined or organizationItem.org_status == 'existing')
+      loop_var: org
 
-  # Deploy all other nodes
-  - name: 'Deploy nodes'
+  # Install Endorser node
+  - name: "Install Endorser node"
     include_role:
-      name: setup/node
+      name: setup/endorser
     vars:
-      organization: "{{ organizationItem.name | lower }}"
-      sc_name: "{{ organization }}-bevel-storageclass"
-      component_ns: "{{ organizationItem.name | lower }}-ns"
-      services: "{{ organizationItem.services }}"
-      kubernetes: "{{ organizationItem.k8s }}"
-      vault: "{{ organizationItem.vault }}"
-      gitops: "{{ organizationItem.gitops }}"
-      genesis: "{{ network.genesis }}"
+      org_name: "{{ org.name | lower }}"
+      endorser: "{{ org.services.endorser.name | lower }}"
+      trustee: "{{ org.services.trustee.name | lower }}"
+      kubernetes: "{{ org.k8s }}"
+      component_name: "{{ endorser }}"
+      component_ns: "{{ org_name }}-ns"
+      values_dir: "{{ playbook_dir }}/../../../{{ org.gitops.release_dir }}/{{ org_name }}/build"
+      charts_dir: "{{ org.gitops.chart_source }}"
     loop: "{{ network['organizations'] }}"
     loop_control:
-      loop_var: organizationItem
+      loop_var: org
     when:
-    - (organizationItem.type == 'peer')
-    - (organizationItem.org_status is not defined or organizationItem.org_status == 'new')
-    - (not add_new_org|bool or (add_new_org|bool and add_new_org_new_nyms_on_ledger_present|bool))
+    - (org.services.endorser is defined) and (org.services.endorser.name | length > 0)
 
-  # Create and deploy Endorser Identities
-  - name: 'Create Endorser Identities'
-    include_role:
-      name: setup/endorsers
-    vars:
-      organization: "{{ organizationItem.name | lower }}"
-      component_ns: "{{ organizationItem.name | lower }}-ns"
-      kubernetes: "{{ organizationItem.k8s }}"
-      gitops: "{{ organizationItem.gitops }}"
-      vault: "{{ organizationItem.vault }}"
-    loop: "{{ network['organizations'] }}"
-    loop_control:
-      loop_var: organizationItem
-    when:
-    - (organizationItem.type == 'peer')
-    - (organizationItem.org_status is not defined or organizationItem.org_status == 'new')
-    - (not add_new_org|bool or (add_new_org|bool and add_new_org_new_nyms_on_ledger_present|bool))
-  
   # These variables can be overriden from the command line
   vars: 
     install_os: "linux"                           # Default to linux OS
