--- a/platforms/hyperledger-indy/configuration/roles/create/namespace/tasks/main.yaml
+++ b/platforms/hyperledger-indy/configuration/roles/create/namespace/tasks/main.yaml
@@ -35,5 +35,5 @@
     name: "{{ playbook_dir }}/../../shared/configuration/roles/git_push"
   vars:
     GIT_DIR: "{{ playbook_dir }}/../../../"
-    gitops: "{{ organizationItem.gitops }}"
+    gitops: "{{ org.gitops }}"
     msg: "[ci skip] Pushing deployment files for namespace"
