--- a/platforms/hyperledger-indy/configuration/samples/network-minikube.yaml
+++ b/platforms/hyperledger-indy/configuration/samples/network-minikube.yaml
@@ -75,8 +75,7 @@ network:
       # Services maps to the pods that will be deployed on the k8s cluster
       # This sample has trustee
       services:
-        trustees:
-        - trustee:
+        trustee:
           name: authority-trustee
           genesis: true
           server:
@@ -146,8 +145,7 @@ network:
             port: 15722
             targetPort: 15722
             ambassador: 15722
-        endorsers:
-        - endorser:
+        endorser:
           name: provider-endorser
           full_name: Some Decentralized Identity Mobile Services Provider
           avatar: http://provider.com/avatar.png
@@ -222,15 +220,3 @@ network:
             port: 15742
             targetPort: 15742
             ambassador: 15742
-        endorsers:
-        - endorser:
-          name: partner-endorser
-          full_name: Some Decentralized Identity Mobile Services Partner
-          avatar: http://partner.com/avatar.png
-          # public endpoint will be {{ endorser.name}}.{{ external_url_suffix}}:{{endorser.server.httpPort}}
-          # Eg. In this sample http://provider-endorser.indy.blockchaincloudpoc.com:15033/
-          # For minikube: http://<minikubeip>>:15033
-          server:
-            httpPort: 15033
-            apiPort: 15034
-            webhookPort: 15035
