[fabric] Operator readme updates
Signed-off-by: sownak <sownak.roy@accenture.com>

--- a/platforms/hyperledger-fabric/configuration/roles/delete/operator/tasks/delete_channel.yaml
+++ b/platforms/hyperledger-fabric/configuration/roles/delete/operator/tasks/delete_channel.yaml
@@ -13,7 +13,7 @@
     state: absent
     kubeconfig: "{{ kubernetes.config_file }}"
     context: "{{ kubernetes.context }}"
-  ignore_errors: yes
+  ignore_errors: true
 
 # Delete main channel
 - name: Delete main channel
@@ -24,4 +24,4 @@
     state: absent
     kubeconfig: "{{ kubernetes.config_file }}"
     context: "{{ kubernetes.context }}"
-  ignore_errors: yes
+  ignore_errors: true
