--- a/platforms/hyperledger-fabric/configuration/roles/operator/create/ca/user/tasks/main.yaml
+++ b/platforms/hyperledger-fabric/configuration/roles/operator/create/ca/user/tasks/main.yaml
@@ -17,7 +17,7 @@
   until: this.status == 200
   retries: "{{ network.env.retry_count }}"
   delay: 20
-  ignore_errors: yes
+  ignore_errors: true
 
 # Create main user for orderer org
 - name: "Create main user for orderer org"
@@ -33,7 +33,7 @@
   when: 
   - component_type == 'orderer'
   - user_type == 'default'
-  ignore_errors: yes
+  ignore_errors: true
 
 # Create main user for peer org
 - name: "Create main user for peer org"
@@ -63,7 +63,7 @@
     kubeconfig_path: "{{ item.k8s.config_file }}"
   when:
   - user_type == 'admin'
-  ignore_errors: yes
+  ignore_errors: true
 
 # Create admin user identity for orderer
 - name: "Create admin user identity for orderer"
