--- a/platforms/hyperledger-fabric/configuration/roles/operator/create/peer/tasks/main.yaml
+++ b/platforms/hyperledger-fabric/configuration/roles/operator/create/peer/tasks/main.yaml
@@ -17,7 +17,7 @@
   until: this.status == 200
   retries: "{{ network.env.retry_count }}"
   delay: 20
-  ignore_errors: yes
+  ignore_errors: true
 
 # Create peer node
 - name: "Create peer node"
